<resources>
    <string name="app_name">아코끼니</string>
    <string name="choose_meal">식사 선택</string>
    <string name="type_of_meal">식사 종류</string>
    <string name="choose_place">장소 선택</string>
    <string name="name_meal">식사 이름 입력</string>
    <string name="meal_cost">식사 비용</string>
    <string name="meal_photo">식사 사진 입력</string>
    <string name="register_button">등록하기</string>
    <string name="meal">식사</string>
    <string name="cafe">카페</string>
    <string name="breakfast">조식</string>
    <string name="lunch">중식</string>
    <string name="dinner">석식</string>
    <string name="drink">음료</string>
    <string name="dessert">디저트</string>
    <string name="choose_place_words">장소를 입력해주세요.</string>
    <string name="meal_name_word">식사 이름을 입력해주세요.</string>
    <string name="meal_cost_word">식사 비용을 입력해주세요.</string>
    <string name="meal_time">식사 시간</string>
    <string name="meal_photo_word">사진을 선택해주세요.</string>
    <string name="meal_emoji">식사 이모지</string>
    <string name="meal_evaluation">식사 평가</string>
    <string name="meal_evaluation_word">식사평을 입력해주세요.</string>
    <string name="meal_type_word">식사 종류를 선택하세요.</string>
    <string name="meal_tme">식사 시간을 입력해주세요</string>
    <string name="meal_review">식사 만족도를 입력해주세요.</string>
    <string name="BackToFrag2">입력탭으로 돌아가기</string>
    <string name="meal_place">식사 장소</string>
    <string name="meal_information">식사 정보</string>
    <string name="meal_data">식사 날짜</string>
    <string name="meal_ok">확인하기</string>
    <string name="cost_show">총 비용</string>
    <string name="meal_calorie">식사 칼로리</string>
    <string name="meal_month_tv">한달 식사 리스트</string>
    <string name="meal_type_see">식사별 비용 보기</string>
    <string name="month_cost">한달 총 비용</string>
    <string name="month_avg_cost">하루 평균 비용</string>
    <string name="month_kacl">한달 총 칼로리</string>
    <string name="meal_kcal_see">칼로리 분석 보기</string>
    <string name="month_avg_kcal">하루 평균 칼로리</string>
    <string name="printf">한달간 식사 목록</string>
    <string name="kcal">성인 남성 권장칼로리 = 2200~3000kcal
        성인 여성 권장칼로리 = 1800~2400kcal</string>
    <string name="main_title">동국대학교 식단 지킴이</string>
    <string name="main_subtitle">아코끼니로 식단 관리를 해보세요!\n 효율적으로 매일 식단 관리하세요</string>
    <string name="main_meal">- 상록원 1층\n- 상록원 2층\n- 상록원 3층\n- 가든쿡\n- 기숙사 식당</string>
    <string name="main_cafe">- 가온누리(중앙도서관)\n- 카페ing(혜화관)\n- 두리터(가든쿡)\n- 그루터기(경영관)\n- 블루포트(원흥관)\n- 폴바셋(기숙사)</string>
    <string name="meal_name">식사 이름</string>
</resources>