<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:baselineAligned="false"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/breakfast"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="217dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/dinner"
                android:textColor="#FE7501"
                app:layout_constraintEnd_toStartOf="@+id/button10"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/drink"
                android:textColor="#FE7501"
                app:layout_constraintBaseline_toBaselineOf="@+id/button11"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/lunch"
                android:textColor="#FE7501"
                app:layout_constraintBaseline_toBaselineOf="@+id/button11"
                app:layout_constraintEnd_toStartOf="@+id/button11"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/dessert"
                android:textColor="#FE7501"
                app:layout_constraintEnd_toEndOf="@+id/button11"
                app:layout_constraintTop_toBottomOf="@+id/button11"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="319dp"
                android:layout_height="41dp"
                android:layout_marginTop="107dp"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/meal_cost_word"
                android:textColor="#FE7501"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="378dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/register_button"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button16"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/meal_photo_word"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/button9"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_height="156dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/meal_photo_word"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="319dp"
                android:layout_height="41dp"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="58dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/choose_place_words"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/editTextText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button12"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/meal"
                android:textColor="#FE7501"
                app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="31dp"
                android:layout_weight="1"
                android:backgroundTint="#131313"
                android:text="@string/cafe"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/button11"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:strokeColor="#232323"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/type_of_meal"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/choose_meal"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="11dp"
                android:layout_weight="1"
                android:text="@string/name_meal"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/editTextText"
                app:layout_constraintStart_toStartOf="@+id/editTextText" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/meal_cost"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="@+id/editTextText"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/meal_photo"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/button16"
                app:layout_constraintStart_toStartOf="@+id/button16" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="69dp"
                android:layout_weight="1"
                android:text="@string/meal_evaluation"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="@+id/button17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="45dp"
                android:layout_weight="1"
                android:text="@string/meal_emoji"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button16" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="72dp"
                android:layout_weight="1"
                android:text="@string/meal_time"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="@+id/button15"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/choose_meal"
                android:textColor="#FE7501"
                app:layout_constraintBottom_toTopOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#FE7501"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="114dp"
                android:ems="10"
                android:text="@string/meal_name_word"
                android:textColor="#FE7501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button12" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_weight="1"></FrameLayout>

</LinearLayout>