<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/meal_information"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/iv_meal"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_cost"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FE7501"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_meal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_type"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FE7501"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_cost"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_cost"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FE7501"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_place"
                android:textAlignment="center"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/meal_place"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FE7501"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_data"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_data"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_time"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_evaluation"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/meal_evaluation"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#131313"
            android:text="@string/meal_ok"
            android:textColor="#FE7501" />


    </LinearLayout>

</LinearLayout>